fix debate-create overlap & stuff

--- a/files/styles/screen.less
+++ b/files/styles/screen.less
@@ -694,11 +694,9 @@ img-crop {
 }
 
 .embed-responsive {
-  // position: relative;
   display: block;
-  // height: 0;
   padding: 0;
-  // overflow: hidden;
+  margin-bottom: 10px;
 
   .embed-responsive-item,
   iframe,
@@ -827,6 +825,9 @@ blockquote {
 }
 a.list-text {
   white-space: normal;
+}
+.list-text > img {
+  min-height: 260px;
 }
 
 p, h1, h2, h3, h4, h5, h6 {
